			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

22-Aug-2005
~~~~~~~~~~~
Marked some titlebar flags as translatable (reported by seventh guardian).

17-Aug-2005
~~~~~~~~~~~
Updated install.sh with the current shared-mime-info URL (Stephen Watson).

16-Aug-2005
~~~~~~~~~~~
Updated French translation (Vincent Lefèvre).
Bugfix: Fix typo in the Solaris xattr implementation (Stephen Watson).

15-Aug-2005
~~~~~~~~~~~
Bugfix: When doing Tab completion, part of the code was still case sensitive,
	causing it to sometimes fail to notice multiple matched (Keith Warno;
	reported by Tristan McLeay).

14-Aug-2005
~~~~~~~~~~~
Added ROX-Filer.xml file, giving details of the current version. This can be
used to register a CVS version of the filer with the injector easily (Thomas
Leonard).
Renamed 'Xterm Here' to 'Terminal Here' (suggested by seventh guardian).

13-Aug-2005
~~~~~~~~~~~
Removed GNOME-VFS from --version output; we never use it now (Thomas Leonard).
Failure to create a usable default icon theme can be due to a broken link, so
inform the user and show ~/.icons (Stephen Watson).
Extended attribute support more general, not just types (Stephen Watson).

12-Aug-2005
~~~~~~~~~~~
Updated Polish translation (Wit Wiliński).
Added Portuguese (for Portugal) translation (Renato Caldas).

09-Aug-2005 (Release 2.3)
~~~~~~~~~~~
Opening the menu with the menu key had broken. Also fixed a few minor leaks
(Thomas Leonard).

06-Aug-2005
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Fixed memory leak in new SOAP RPC calls (Thomas Leonard).
Provide alternate to_html.xsl file for different location of Docbook
stylesheets (Stephen Watson).
GTK bug #152151 also causes BadDrawable errors so ignore them as well
(Stephen Watson).

04-Aug-2005
~~~~~~~~~~~
Bugfix: Ultimate++ could crash the filer when its window was iconified
	(Guido Schimmels).

01-Aug-2005
~~~~~~~~~~
Updated Dutch translation (Jan Wagemakers).

31-Jul-2005
~~~~~~~~~~~