@@ -8,6 +8,6 @@
     ROX-Filer is a fast and powerful graphical file manager. It has full drag-and-drop support and background file operations, and is highly configurable. It can also act as a pinboard, allowing you to pin frequently used files to the desktop background.
   </description>
   <group>
-    <implementation version="2.3.0" stability='testing' id="."/>
+    <implementation version="2.3.0" released='Snapshot' stability='testing' id="."/>
   </group>
 </interface>
