@@ -2,6 +2,12 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+27-Aug-2005
+~~~~~~~~~~~
+When using 'From LANG', check for translations with and with the territory
+part (seventh guardian). Also do this when loading the manual or finding
+a summary in AppInfo.xml (Thomas Leonard).
+
 22-Aug-2005
 ~~~~~~~~~~~
 Marked some titlebar flags as translatable (reported by seventh guardian).
